create new branch HW9

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,72 @@
     padding: 0;
     box-sizing: border-box;
 }
-img {
-    max-width: 100%;
-}
+
 html {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    font-style: normal;
+    color: #212121;;
+    line-height: 1.7;
+    
 }
+
+.container {
+    width: 100%;
+    max-width: 1110px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 0 auto;
+}
+
+.content:after {
+    content: '';
+    display: block;
+    clear: both;
+}
+
+
+.card {
+    width: 200px;
+    background: #FC8F8F;
+    padding: 60px 0;
+    margin: 0 10px;
+}
+
+.content {
+    margin-top: 25px;
+}
+
+.float-left {
+    float: left;
+}
+
+.number {
+    font-size: 64px;
+    text-align: center;
+}
+
+.float-right {
+    float: right;
+}
+
+.card-mini {
+    width: 100px;
+    background: #FC8F8F;
+    padding: 30px 0;
+    margin: 0 10px;
+}
+
+.number-mini {
+    text-align: center;
+    font-size: 36px;
+}
+
+
+
+
+
+
+
+
