create new branch HW8

--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,142 @@
     padding: 0;
     box-sizing: border-box;
 }
-img {
-    max-width: 100%;
-}
+
 html {
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    font-style: normal;
+    color: #727272;
+    line-height: 1.7; 
 }
+
+.container {
+    width: 100%;
+    max-width: 1110px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: 0 auto;
+}
+
+.top-container {
+    background: #EEEFF1;
+    padding: 79px 0 141px 0;
+}
+
+
+.flex {
+    display: flex;
+}
+
+.nav-item {
+    list-style-type: none;
+    font-size: 16px;
+    color: #000000;
+    margin-right: 42px;
+    cursor: pointer;
+}
+
+.nav-item:hover {
+    color: #34547A;
+}
+
+
+h1 {
+    font-weight: 500;
+    font-size: 48px;
+    line-height: 79px;
+    color: #000000;
+    padding: 162px 0 60px 0;
+}
+
+.text {
+    max-width: 540px;
+    
+}
+
+.btn {
+    background: #34547A;
+    padding: 20px 41px;
+    text-decoration: none;
+    color: #FFFFFF;
+    
+}
+
+.text-desc {
+    margin-bottom: 65px;
+}
+
+.center-container {
+    background: #FFFFFF;
+    padding: 112px 0 100px 0;
+}
+
+
+.about-me {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 38px;
+    color: #000000;
+    margin-bottom: 50px;
+}
+
+.margin-center {
+    margin: 0 auto;
+}
+
+.text-center {
+    text-align: center;
+}
+
+.projects-container {
+    background: #34547A;
+    padding: 100px 0;
+}
+
+.box {
+    display: flex;
+    color: #FFFFFF;
+}
+
+.projects {
+    margin-left: 20px;
+}
+
+.rating {
+    font-weight: 500;
+    font-size: 21px;
+    line-height: 25px;
+    color: #FFFFFF;
+}
+
+.space-between {
+    justify-content: space-between; 
+}
+
+.content {
+    background: #EEEFF1;
+    padding: 100px 0;
+}
+
+.footer-container {
+    background: #34547A;
+    padding: 50px 0;
+}
+
+.text-footer {
+    font-size: 13px;
+    color: #FFFFFF;
+    margin-top: 20px;
+}
+
+
+
+
+
+
+
+
+
+
+
